:sparkles: feat: Cabeçalho da pagina

--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./assets/favicon/favicon.ico" type="image/x-icon">
+
+    <!--CSS-->
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Master Tiger</title>
 </head>
 <body>
-    
+    <!--Navbar-->
+    <header>
+        <div class="logo-container">
+            <img src="assets/logo/logo-branco.png" alt="" width = 84px;>
+            <H1>Master Tiger</H1>
+        </div>
+        
+        <nav>
+            <a href="">Sobre</a>
+            <a href="">Administradores</a>
+            <a href="">Depoimentos</a>
+            <a href="">Localização</a>
+            <button>Contato</button>
+        </nav>
+    </header>
 </body>
 </html>
