:sparkles: feat: Fomulario para contato

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <!-- Instrutores -->
     <section id="instrutores" class="instrutores fundo-laranja">
-
+        <div class="instrutor-filtro"></div>
         <h2 class="titulo-sec centro preto">교사<br>Instrutores</h2>
 
         <div class="instrutores-container">
@@ -200,19 +200,23 @@
 
       <!-- Formulário -->
       <section id="forms" class="forms">
-        <div class="forms-text">
-            <h3 class="titulo-texto branco">Formulário de Contato Team Tiger</h3>
+        <h2 class="titulo-sec centro branco"><span class="cor-simbolo">메시지</span><br>Contato</h2>
+        <div class="forms-container">
+          <div class="forms-text">
+            <h3 class="titulo-texto branco">Formulário de <br> Contato Team Tiger</h3>
             <p>Envie uma mensagem para a Team Tiger para obter mais informações sobre o projeto.</p>
+          </div>
+
+          <div class="forms-area">
+            <h5 class="branco">Nome:</h5>
+            <input type="text" name="" id="">
+            <h5 class="branco">Email:</h5>
+            <input type="email" name="" id="">
+            <h5 class="branco">Mensagem:</h5>
+            <textarea></textarea>
+          </div>
         </div>
 
-        <div class="forms-area">
-          <h3 class="branco">Nome:</h3>
-          <input type="text" name="" id="">
-          <h3 class="branco">Email:</h3>
-          <input type="email" name="" id="">
-          <h3 class="branco">Mensagem:</h3>
-          <input type="text" name="" id="">
-        </div>
       </section>
 
       <!-- Localização -->
